--- a/src/main/java/org/olat/ims/qti21/ui/editor/interactions/_content/kprim_choices.html
+++ b/src/main/java/org/olat/ims/qti21/ui/editor/interactions/_content/kprim_choices.html
@@ -24,7 +24,11 @@
 		$f.appendFlexiFormDirtyForCheckbox("oo_wrong-${foreach.count}")
 	</div>
 	<div class="col-sm-9">
-		$r.render(${choice.getAnswer().getComponent().getComponentName()})
+		#if($r.visible($choice.answer))
+			$r.render(${choice.getAnswer().getComponent().getComponentName()})
+		#else
+			$r.render(${choice.getAnswerReadOnly().getComponent().getComponentName()})
+		#end
 		#if($f.hasError($item))
 			<span class="o_icon o_icon_error form-control-feedback"></span>
 		#end
